# cnake

./: .gitignore  CMakeLists.txt  README.md  plan.txt
.helix/: config.toml
cmake/: vcpkg-toolchain.cmake
src/: Common.cpp  Common.hpp  GameState.cpp  GameState.hpp  RenderContext.cpp  RenderContext.hpp  Snake.cpp  Snake.hpp  main.cpp
